style: prevent overflow

--- a/style.css
+++ b/style.css
@@ -51,7 +51,8 @@ body {
 
 .chat-container {
   overflow-y: auto;
-  padding: 20px;
+  overflow-x: clip;
+  padding: 20px 0px;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -65,11 +66,13 @@ body {
   padding: 12px;
   border-radius: 10px;
   color: #fff;
+
+  font-family: monospace;
   font-size: 16px;
   line-height: 1.4;
+
   margin-left: 30px;
   margin-right: 30px;
-  font-family: sans-serif;
   box-shadow: rgb(93, 93, 93) 1px 1px 1px;
 }
 
@@ -87,6 +90,12 @@ body {
   border-bottom-left-radius: 2px;
   padding-left: 20px;
   padding-right: 20px;
+}
+
+.response-message p {
+  max-width: 100%;
+  text-wrap: wrap;
+  overflow-wrap: anywhere;
 }
 
 .content {
